--- a/src/pages/mainPage/MainPage.module.css
+++ b/src/pages/mainPage/MainPage.module.css
@@ -1,3 +1,22 @@
-.mainPage {
+.main {
   background: #271a58;
+}
+.main_title {
+  color: #fff;
+  font-family: StratosSkyeng;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 115%; /* 23px */
+  letter-spacing: -0.05px;
+  opacity: 0.5;
+}
+.main_subtitle {
+  color: #f4f4ff;
+  font-family: StratosSkyeng;
+  font-size: 60px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 91.5%; /* 54.9px */
+  letter-spacing: -1.169px;
 }
