--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -3,6 +3,7 @@
   flex-direction: row;
   align-items: center;
   justify-content: space-between;
+  padding-bottom: 35px;
 }
 .button {
   outline: none;
@@ -16,7 +17,7 @@
   background: #140d40;
   color: #fff;
   text-align: center;
-  font-family: "StratosSkyeng";
+  font-family: StratosSkyeng !important;
   font-size: 16px;
   font-style: normal;
   font-weight: 400;
