--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -17,7 +17,7 @@
   background: #140d40;
   color: #fff;
   text-align: center;
-  font-family: StratosSkyeng !important;
+  font-family: StratosSkyeng;
   font-size: 16px;
   font-style: normal;
   font-weight: 400;
