--- a/src/components/button/button.module.css
+++ b/src/components/button/button.module.css
@@ -2,7 +2,7 @@
   width: 278px;
   height: 52px;
   border-radius: 46px;
-  font-family: StratosSkyeng;
+  font-family: "Stratos";
   font-size: 18px;
   font-style: normal;
   font-weight: 400;
