--- a/src/pages/disallowed-course/disallowed-course.module.css
+++ b/src/pages/disallowed-course/disallowed-course.module.css
@@ -2,6 +2,7 @@
   display: flex;
   flex-flow: column wrap;
   gap: 75px;
+  box-sizing: border-box;
 }
 
 .banner {
@@ -17,4 +18,19 @@
 .content-container {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
+  column-gap: 80px;
+  margin-top: 22px;
+  box-sizing: border-box;
+}
+
+.reasons {
+  margin-top: 40px;
+}
+
+.text {
+  text-align: justify;
+}
+
+:global(li) {
+  list-style-position: inside;
 }
