--- a/src/pages/mainPage/MainPage.module.css
+++ b/src/pages/mainPage/MainPage.module.css
@@ -2,8 +2,29 @@
   background: #271a58;
 }
 
+.img_box {
+  position: relative;
+  cursor: pointer;
+}
+.img_box:hover {
+  opacity: 0.8;
+  transition: 0.3s;
+}
+.img_title {
+  position: absolute;
+  top: 50px;
+  left: 50px;
+  color: #000;
+  font-size: 36px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 110%; /* 39.6px */
+  letter-spacing: -0.5px;
+}
 .content {
   position: relative;
+  display: flex;
+  flex-direction: column;
 }
 .content_header {
   display: flex;
@@ -13,7 +34,7 @@
 }
 .title {
   color: #fff;
-  font-family: StratosSkyeng;
+
   font-size: 20px;
   font-style: normal;
   font-weight: 400;
@@ -24,10 +45,24 @@
 }
 .subtitle {
   color: #f4f4ff;
-  font-family: StratosSkyeng;
+
   font-size: 60px;
   font-style: normal;
   font-weight: 400;
   line-height: 91.5%; /* 54.9px */
   letter-spacing: -1.169px;
+}
+
+.content_main {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  align-items: start;
+  justify-content: start;
+  gap: 37px;
+}
+.img {
+  border-radius: 30px;
+  width: 360px;
+  height: 480px;
 }
