--- a/src/components/button/button.module.css
+++ b/src/components/button/button.module.css
@@ -1,10 +1,10 @@
-
 .button {
+  cursor: pointer;
   padding: 0 24px;
   width: fit-content;
   height: 52px;
   border-radius: 46px;
-  font-family: "Stratos";
+
   font-size: 18px;
   font-style: normal;
   font-weight: 400;
