--- a/src/index.module.css
+++ b/src/index.module.css
@@ -12,6 +12,11 @@
   cursor: pointer;
 }
 
+:global(video) {
+  width: 100%;
+  height: 639px;
+}
+
 :global(.small-text) {
   color: #000;
   font-family: "Regular", Arial, Helvetica, sans-serif;
