--- a/src/pages/mainPage/MainPage.module.css
+++ b/src/pages/mainPage/MainPage.module.css
@@ -57,8 +57,8 @@
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-  align-items: start;
-  justify-content: start;
+  align-items: flex-start;
+  justify-content: flex-start;
   gap: 37px;
 }
 .img {
