--- a/src/pages/profilePage/ProfilePage.module.css
+++ b/src/pages/profilePage/ProfilePage.module.css
@@ -1,6 +1,6 @@
 .content_profile {
   display: flex;
-  align-items: start;
+  align-items: flex-start;
   justify-content: space-between;
   gap: 40px;
   flex-direction: column;
@@ -17,7 +17,7 @@
 
 .content_user {
   display: flex;
-  align-items: start;
+  align-items: flex-start;
   justify-content: space-between;
   gap: 20px;
   flex-direction: column;
@@ -32,7 +32,7 @@
 
 .content_buttons {
   display: flex;
-  align-items: start;
+  align-items: flex-start;
   justify-content: space-between;
   gap: 14px;
   flex-direction: column;
@@ -42,8 +42,8 @@
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-  align-items: start;
-  justify-content: start;
+  align-items: flex-start;
+  justify-content: flex-start;
   gap: 37px;
 }
 
