--- a/src/components/button/button.module.css
+++ b/src/components/button/button.module.css
@@ -4,7 +4,7 @@
   width: fit-content;
   height: 52px;
   border-radius: 46px;
-
+  font-family: "Regular", Arial, Helvetica, sans-serif;
   font-size: 18px;
   font-style: normal;
   font-weight: 400;
