--- a/src/components/input/input.module.css
+++ b/src/components/input/input.module.css
@@ -5,7 +5,7 @@
   color: #000;
   background-color: transparent;
   padding-bottom: 8px;
-  font-family: "Regular";
+  font-family: "Regular", Arial, Helvetica, sans-serif;
   font-size: 18px;
   font-style: normal;
   font-weight: 400;
