--- a/src/components/button/button.module.css
+++ b/src/components/button/button.module.css
@@ -1,7 +1,7 @@
 .button {
   cursor: pointer;
   padding: 0 24px;
-  width: fit-content;
+  width: 278px;
   height: 52px;
   border-radius: 46px;
   font-family: "Regular", Arial, Helvetica, sans-serif;
