--- a/src/index.module.css
+++ b/src/index.module.css
@@ -8,6 +8,11 @@
   padding: 30px 140px 60px 140px;
 }
 
+:global(.container-opacity) {
+  opacity: 0.2;
+  transition: 0.5s;
+}
+
 :global(button) {
   cursor: pointer;
 }
