--- a/src/components/choseTraining/choseTraining.module.css
+++ b/src/components/choseTraining/choseTraining.module.css
@@ -19,13 +19,12 @@
   background-color: #fff;
   border-radius: 12px;
   display: flex;
-  flex-flow: column wrap;
+  flex-direction: column;
   align-items: center;
   justify-content: start;
   gap: 40px;
   padding: 33px 47px 47px 41px;
   box-sizing: border-box;
-  overflow-y: scroll;
 }
 
 .title {
@@ -87,9 +86,10 @@
 }
 .inputs_container {
   display: flex;
-  flex-flow: column wrap;
+  flex-direction: column;
   align-items: center;
   gap: 12px;
   width: 100%;
   box-sizing: border-box;
+  overflow-y: scroll;
 }
