--- a/src/index.module.css
+++ b/src/index.module.css
@@ -40,3 +40,18 @@
   font-style: normal;
   font-display: swap;
 }
+
+::-webkit-scrollbar {
+  width: 3px;
+  border-radius: 5px;
+  scroll-margin: 20px;
+}
+
+::-webkit-scrollbar-track {
+  background: rgba(0, 0, 0, 0.05);
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: rgba(0, 0, 0, 0.15);
+  border-radius: 5px;
+}
