--- a/src/components/choseTraining/choseTraining.module.css
+++ b/src/components/choseTraining/choseTraining.module.css
@@ -21,7 +21,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: start;
+  justify-content: flex-start;
   gap: 40px;
   padding: 33px 47px 47px 41px;
   box-sizing: border-box;
