--- a/src/components/userDataEditing/LoginEditing.module.css
+++ b/src/components/userDataEditing/LoginEditing.module.css
@@ -20,7 +20,7 @@
   background-color: #fff;
   border-radius: 12px;
   display: flex;
-  flex-flow: column wrap;
+  flex-direction: column;
   align-items: center;
   justify-content: space-between;
   padding: 33px 47px 47px 41px;
@@ -38,6 +38,11 @@
   display: flex;
   flex-flow: column wrap;
   align-items: center;
-  gap: 20px;
+  gap: 10px;
   box-sizing: border-box;
+}
+
+.error {
+  height: 20px;
+  color: red;
 }
