--- a/src/components/push-notice/push-notice.module.css
+++ b/src/components/push-notice/push-notice.module.css
@@ -2,9 +2,9 @@
   position: fixed;
   z-index: 40;
   top: 10px;
-  left: 10px;
-  width: 200px;
-  height: 50px;
+  right: 10px;
+  width: 250px;
+  height: 70px;
   padding: 10px;
   margin: 10px;
   line-height: 1.8;
@@ -27,7 +27,8 @@
 .alertClose {
   float: right;
   padding-top: 5px;
-  font-size: 10px;
+  font-size: 20px;
+  width: 20px;
   border: none;
   background: transparent;
 }
