--- a/src/components/push-notice/push-notice.module.css
+++ b/src/components/push-notice/push-notice.module.css
@@ -4,7 +4,7 @@
   top: 10px;
   right: 10px;
   width: 250px;
-  height: 70px;
+  min-height: 70px;
   padding: 10px;
   margin: 10px;
   line-height: 1.8;
