--- a/src/pages/disallowed-course/disallowed-course.module.css
+++ b/src/pages/disallowed-course/disallowed-course.module.css
@@ -9,10 +9,8 @@
   width: 100%;
   height: 310px;
   border-radius: 30px;
-
   background-color: rgba(205, 205, 205, 0.1);
   background-size: cover;
-  /* background-position: center; */
   background-repeat: no-repeat;
   backdrop-filter: blur(15px);
 }
@@ -20,6 +18,17 @@
 .content-container {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
+  column-gap: 80px;
+  margin-top: 22px;
+  box-sizing: border-box;
+}
+
+.directions {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  row-gap: 22px;
+  /* grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); */
+  /* grid-auto-flow: row dense; */
   column-gap: 80px;
   margin-top: 22px;
   box-sizing: border-box;
