--- a/src/components/progress-form/progress-form.module.css
+++ b/src/components/progress-form/progress-form.module.css
@@ -1,6 +1,6 @@
 .wrapper {
   width: 444px;
-  height: 554px;
+  /* height: 554px; */
   border-radius: 12px;
   background: #fff;
   display: flex;
@@ -15,6 +15,7 @@
   box-shadow: 0px 0px 100px #9a48f1;
   padding: 36px 43px 41px 44px;
   box-sizing: border-box;
+  /* overflow-y: scroll; */
 }
 
 .heading {
