--- a/src/pages/course-page/allowed-course/allowed-course.module.css
+++ b/src/pages/course-page/allowed-course/allowed-course.module.css
@@ -24,17 +24,13 @@
   background: #f2f2f2;
   padding: 36px 55px 32px 44px;
   width: 638px;
-  height: 336px;
   box-sizing: border-box;
 }
 
 .progress-container {
-  display: grid;
-  justify-content: space-between;
-  align-items: center;
-  grid-template-columns: repeat(2, 1fr);
-  grid-template-rows: repeat(3, 1fr);
-  column-gap: 34px;
+  width: 100%;
+  display: flex;
+  flex-flow: column;
 }
 
 .heading {
@@ -60,9 +56,20 @@
 
 .list {
   margin-bottom: 40px;
-  max-width: 430px;
+  max-width: 700px;
+  display: flex;
+  flex-flow: column;
+  gap: 30px;
 }
 
 .video {
   height: 630px;
+}
+
+.progress-item-wrapper {
+  height: 64px;
+  display: grid;
+  justify-content: space-between;
+  align-items: center;
+  grid-template-columns: repeat(2, 1fr);
 }
