--- a/src/components/course-banner/course-banner.module.css
+++ b/src/components/course-banner/course-banner.module.css
@@ -2,12 +2,12 @@
   width: 100%;
   height: 310px;
   border-radius: 30px;
-
-  background-color: rgba(205, 205, 205, 0.1);
+  overflow: hidden;
+  background-color: #f5f5f5;
   background-size: cover;
   background-repeat: no-repeat;
-  backdrop-filter: blur(15px);
   position: relative;
+  backdrop-filter: blur(15px);
 }
 
 .text {
@@ -22,4 +22,12 @@
   font-weight: 400;
   line-height: 72px; /* 112.5% */
   letter-spacing: -0.8px;
+  z-index: 20;
+}
+
+.img {
+  position: absolute;
+  left: 70%;
+  bottom: -15%;
+  height: 500px;
 }
