--- a/src/pages/course-page/allowed-course/allowed-course.module.css
+++ b/src/pages/course-page/allowed-course/allowed-course.module.css
@@ -23,7 +23,7 @@
   border-radius: 30px;
   background: #f2f2f2;
   padding: 36px 55px 32px 44px;
-  width: 638px;
+  width: 688px;
   box-sizing: border-box;
 }
 
@@ -72,4 +72,5 @@
   justify-content: space-between;
   align-items: center;
   grid-template-columns: repeat(2, 1fr);
+  column-gap: 34px;
 }
