--- a/src/pages/course-page/allowed-course/allowed-course.module.css
+++ b/src/pages/course-page/allowed-course/allowed-course.module.css
@@ -2,6 +2,7 @@
   display: flex;
   justify-content: space-between;
   margin-top: 75px;
+  /* max-height: 600px; */
 }
 
 .title {
@@ -31,6 +32,7 @@
   width: 100%;
   display: flex;
   flex-flow: column;
+  gap: 10px;
 }
 
 .heading {
@@ -55,11 +57,11 @@
 }
 
 .list {
-  margin-bottom: 40px;
   max-width: 700px;
   display: flex;
   flex-flow: column;
-  gap: 30px;
+  gap: 20px;
+  margin-bottom: 40px;
 }
 
 .video {
@@ -67,10 +69,17 @@
 }
 
 .progress-item-wrapper {
-  height: 64px;
   display: grid;
   justify-content: space-between;
   align-items: center;
   grid-template-columns: repeat(2, 1fr);
   column-gap: 34px;
+}
+
+.exercises-wrapper {
+  padding-bottom: 32px;
+  max-width: 650px;
+  height: 100%;
+  display: flex;
+  flex-flow: column wrap;
 }
