--- a/src/components/input/input.module.css
+++ b/src/components/input/input.module.css
@@ -13,6 +13,12 @@
   letter-spacing: -0.05px;
 }
 
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
 .input::placeholder {
   color: #d0cece;
 }
